manifests/mlflow/ingress-traefik-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: trackingserver
  namespace: aiscope-devops-platform
spec:
  rules:
    - host: mlflow.platform.aiscope.io
      http:
        paths:
          - backend:
              service:
                name: trackingserver
                port:
                  name: server
            path: /
            pathType: ImplementationSpecific
  tls:
    - secretName: mlflow
