manifests/mlflow/mlflow-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  labels:
    app: mlflow
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 5000
      name: server
      targetPort: 5000
  selector:
    app: mlflow

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mlflow
spec:
  serviceName: mlflow
  replicas: 1
  template:
    metadata:
      labels:
        app: mlflow
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      containers:
        - name: mlflow
          imagePullPolicy: IfNotPresent
          image: 192.168.0.93/ai/mlflow:1.21.0-21
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 5000
              name: server
          volumeMounts:
          - name: data
            mountPath: /mlflow
  selector:
    matchLabels:
      app: mlflow
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 100Gi

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  namespace: ai
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: mlflow.platform.aiscope.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: mlflow
            port:
              name: server
